name:                Taiji
version:             0.5.0-dev
synopsis:            all-in-one bioinformatics analysis pipeline
description:         all-in-one bioinformatics analysis pipeline
homepage:            https://taiji-pipeline.github.io/
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2018 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fno-warn-unticked-promoted-constructors

  exposed-modules:     Taiji.Core
                       Taiji.Core.RegulatoryElement
                       Taiji.Core.Network
                       Taiji.Core.Network.DeNovo
                       Taiji.Core.Network.External
                       Taiji.Core.Network.Utils
                       Taiji.Core.Ranking
                       Taiji.Core.Config
                       -- Taiji.Extra
                       -- Taiji.Extra.Functions

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.5.0
                     , cereal
                     , containers
                     , clustering
                     , data-default
                     , double-conversion
                     , deepseq
                     , unordered-containers
                     , case-insensitive
                     , conduit
                     , data-default-class
                     , data-ordlist
                     , haskell-igraph >= 0.7.0
                     , hashable
                     , IntervalMap
                     , lens
                     , matrices
                     , mtl
                     , singletons
                     , statistics >= 0.14.0
                     , SciFlow >= 0.6.2
                     , temporary
                     , text
                     , vector
                     , vector-algorithms
                     , zlib
                     , Taiji-ChIP-seq
                     , Taiji-ATAC-seq
                     , Taiji-RNA-seq
                     , Taiji-types
  default-language:    Haskell2010

executable taiji
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread

  other-modules:       Paths_Taiji

  build-depends:       base
                     , lens
                     , SciFlow >= 0.6.1
                     , Taiji
                     , Taiji-ChIP-seq
                     , Taiji-ATAC-seq
                     , Taiji-RNA-seq
                     , Taiji-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Taiji-pipeline/Taiji.git
