name:                Taiji
version:             1.2.1.2
synopsis:            Multi-omics bioinformatics analysis pipeline
description:         Taiji is an integrated multi-omics bioinformatics analysis
                     pipeline. It can analyze ATAC-seq, RNA-seq, single cell
                     ATAC-seq, single cell RNA-seq datasets as well as
                     integrated analysis of different kinds of data.
homepage:            https://taiji-pipeline.github.io/
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2021 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fno-warn-unticked-promoted-constructors

  exposed-modules:     Taiji.Core
                       Taiji.Core.RegulatoryElement
                       Taiji.Core.Network
                       Taiji.Core.Network.DeNovo
                       Taiji.Core.Network.External
                       Taiji.Core.Ranking
                       Taiji.SingleCell

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bbi
                     , bytestring
                     , bio-pipelines >= 0.1.2
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.9.5
                     , containers
                     , clustering
                     , double-conversion
                     , deepseq
                     , unordered-containers
                     , case-insensitive
                     , conduit
                     , data-default-class
                     , data-ordlist
                     , haskell-igraph >= 0.7.1
                     , hashable
                     , IntervalMap
                     , matrices
                     , mtl
                     , singletons >= 2.5
                     , statistics >= 0.14.0
                     , SciFlow >= 0.7.2
                     , temporary
                     , text
                     , vector
                     , vector-algorithms
                     , zlib
                     , Taiji-utils >= 0.1.1
                     , Taiji-scATAC-seq >= 0.2.0
  default-language:    Haskell2010

executable taiji
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread

  other-modules:       Paths_Taiji

  build-depends:       base
                     , SciFlow >= 0.7.1
                     , SciFlow-app
                     , SciFlow-remote
                     , data-default
                     , bio-pipelines
                     , text
                     , Taiji
                     , Taiji-ATAC-seq
                     , Taiji-RNA-seq
                     , Taiji-scRNA-seq
                     , Taiji-scATAC-seq
                     , Taiji-fusion
                     , Taiji-utils
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Taiji-pipeline/Taiji.git
